dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(psxinteractor, 1.0)
AM_CONFIG_HEADER(config.h)

dnl Pick up the Gnome macros.
AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

GNOME_COMPILE_WARNINGS
GNOME_X_CHECKS

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GNU_GETTEXT

dnl -----------------------------------------------------------------------
dnl
dnl PSXDEV
dnl
dnl -----------------------------------------------------------------------

AC_ARG_WITH(psxdev,[--with-psxdev=PREFIX where is the PSXDEV root])

AC_MSG_CHECKING([for PSXDEV root])
if test -n "$PSXDEV" ; then
	if test -n "$with_psxdev" ; then
		PSXDEV="$with_psxdev"
	fi
else
	PSXDEV=$prefix
fi
AC_MSG_RESULT([$PSXDEV])

AC_SUBST(psxdev_includes)
AC_SUBST(psxdev_libraries)

psxdev_includes="-I$PSXDEV/include"
psxdev_libraries="-L$PSXDEV/lib"
CFLAGS="$CFLAGS $psxdev_includes"
LDFLAGS="$LDFLAGS $psxdev_libraries"

AC_MSG_CHECKING([for psxdev.h])
AC_TRY_COMPILE([#include <psxdev.h>],,AC_MSG_RESULT([yes]),AC_MSG_ERROR("psxdev.h of libpsxdev.a is missing!"))
AC_MSG_CHECKING([for bfd.h])
AC_TRY_COMPILE([#include <bfd.h>],,AC_MSG_RESULT([yes]),AC_MSG_ERROR("bfd.h of libbfd.a is missing!"))

dnl -----------------------------------------------------------------------

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

dnl Subst PACKAGE_PIXMAPS_DIR.
PACKAGE_PIXMAPS_DIR="`gnome-config --datadir`/pixmaps/${PACKAGE}"
AC_SUBST(PACKAGE_PIXMAPS_DIR)

AC_OUTPUT([
Makefile
macros/Makefile
src/Makefile
intl/Makefile
po/Makefile.in
])

